# requester

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.claude/: CLAUDE.md
backend/: Dockerfile  alembic.ini  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_init.py  0002_user_teams.py  25f3b4ecc637_init_tables.py  5cf9022c7901_add_start_date_due_date_to_requests.py  956d358fd574_add_risk_release_date_release_status_to_.py  a1b2c3d4e5f6_add_users_and_comments.py  b2c3d4e5f6a7_simplify_request_status.py  c3d4e5f6a7b8_drop_module_from_requests.py  d4e5f6a7b8c9_add_archived_status.py  e5f6a7b8c9d0_rename_release_status_to_develop_status.py  f6a7b8c9d0e1_change_develop_status_enum_values.py  g7b8c9d0e1f2_add_ticket_url_to_kanban_cards.py
backend/app/: auth.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  comments.py  kanban.py  requests.py  teams.py
backend/scripts/: create_user.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  app.css  constants.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: CommentDrawer.tsx  CommentSection.tsx  DevelopStatusBadge.tsx  GanttView.tsx  KanbanCard.tsx  KanbanColumn.tsx  Layout.tsx  PriorityBadge.tsx  RequestCard.tsx  RiskBadge.tsx  SegmentedControl.tsx  StageBadge.tsx  StatusBadge.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useRequests.ts
frontend/src/pages/: Backlog.tsx  KanbanBoard.tsx  Login.tsx  RequestForm.tsx  TeamManage.tsx  UserManage.tsx
(+2 files in other folders)
